// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gif Should match with a snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    alt="BMO"
    favorite={false}
    onClick={[Function]}
    src="https://media3.giphy.com/media/UdtJqVG2gCchy/giphy-downsized.gif"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "alt": "BMO",
      "className": undefined,
      "onClick": [Function],
      "src": "https://media3.giphy.com/media/UdtJqVG2gCchy/giphy-downsized.gif",
    },
    "ref": null,
    "rendered": null,
    "type": "img",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "alt": "BMO",
        "className": undefined,
        "onClick": [Function],
        "src": "https://media3.giphy.com/media/UdtJqVG2gCchy/giphy-downsized.gif",
      },
      "ref": null,
      "rendered": null,
      "type": "img",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Gif Should match with a snapshot 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    alt="BMO"
    favorite={true}
    onClick={[Function]}
    src="https://media3.giphy.com/media/UdtJqVG2gCchy/giphy-downsized.gif"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "alt": "BMO",
      "className": "undefined favorite",
      "onClick": [Function],
      "src": "https://media3.giphy.com/media/UdtJqVG2gCchy/giphy-downsized.gif",
    },
    "ref": null,
    "rendered": null,
    "type": "img",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "alt": "BMO",
        "className": "undefined favorite",
        "onClick": [Function],
        "src": "https://media3.giphy.com/media/UdtJqVG2gCchy/giphy-downsized.gif",
      },
      "ref": null,
      "rendered": null,
      "type": "img",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Gif Should not have a favorite class 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    alt="BMO"
    favorite={false}
    onClick={[Function]}
    src="https://media3.giphy.com/media/UdtJqVG2gCchy/giphy-downsized.gif"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "alt": "BMO",
      "className": undefined,
      "onClick": [Function],
      "src": "https://media3.giphy.com/media/UdtJqVG2gCchy/giphy-downsized.gif",
    },
    "ref": null,
    "rendered": null,
    "type": "img",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "alt": "BMO",
        "className": undefined,
        "onClick": [Function],
        "src": "https://media3.giphy.com/media/UdtJqVG2gCchy/giphy-downsized.gif",
      },
      "ref": null,
      "rendered": null,
      "type": "img",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
